# Bcom_co_detector_new

./: README.md  User Agent Major Details List.xlsx  analyze_orders.py  analyze_user_agents.py  config.yaml  example_data.csv  n8n_workflow.json  process_all_data.py  process_data.py  pyproject.toml  ~$User Agent Major Details List.xlsx
botminer/: __init__.py  cli.py  config.py  features.py  heuristics.py  ingest.py  ingest_batch.py  report.py  scoring.py  train.py
botminer/utils/: __init__.py  signatures.py  stats.py  time.py  user_agents.py
data/features/: 2025-01-15.parquet  2025-09-05.parquet  2025-09-06.parquet  2025-09-09.parquet  iso_model_2025-01-15.pkl  iso_model_2025-09-05.pkl  iso_model_2025-09-06.pkl  iso_model_2025-09-09.pkl
data/raw/: 2025-09-05.parquet  2025-09-06.parquet  2025-09-09.parquet  On_demand_report_2025-09-05T18_10_28.350Z_9a5b29e0-8a83-11f0-8254-c9ad7f764aad.csv  On_demand_report_2025-09-05T20_22_35.418Z_0f41bfa0-8a96-11f0-86f2-6147c2f5d7e1.csv  On_demand_report_2025-09-09T09_51_16.699Z_876eeab0-8d62-11f0-8254-c9ad7f764aad.csv  booking_25090520:30.csv  booking_2509052237.csv  ibe_ibemining_all_tables entry_clicks 2025-09-09T1153 (1).csv
reports/2025-09-05/: cohorts.json  summary.md
reports/2025-09-05_20250905_230344/: cohorts.csv  cohorts.json  summary.md
reports/2025-09-06_20250906_000727/: cohorts.csv  cohorts.json  summary.md
reports/2025-09-09_20250910_134324/: cohorts.csv  cohorts.json  summary.md
tests/: __init__.py  test_features.py  test_heuristics.py  test_ingest.py  test_scoring.py  test_train.py  test_utils.py
(+3 files in other folders)
