[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "botminer"
version = "0.1.0"
description = "Batch pattern miner for detecting bot traffic in flight search logs"
authors = [
    {name = "Bot Pattern Analyzer", email = "admin@example.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "hdbscan>=0.8.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "pyarrow>=12.0.0",
    "typer[all]>=0.9.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.scripts]
botminer = "botminer.cli:app"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
